# bigactorrte

./: ._.TemporaryItems  ._README.md  .gitignore  README.md
BigraphDriver/: BigraphDriver.sublime-project  build.sbt  build.sbt~
BigraphDriver/project/: plugins.sbt
BigraphDriver/src/main/resources/: aplication.conf
Vizualizer/src/big_actor_msgs/: CMakeLists.txt
Vizualizer/src/big_actor_msgs/msg/: Bigraph.msg  Hosting.msg  Hosting.msg~  Location.msg  StructureStateEstimate.msg  Vehicle.msg
ros_workspace/devel/: .catkin  .rosinstall  setup.sh
ros_workspace/devel/include/big_actor_msgs/: Bigraph.h  Connectivity.h  Hosting.h  LatLng.h  LatLngAlt.h  Location.h  MissionStateEstimate.h  Network.h  StructureStateEstimate.h  Task.h  Vehicle.h
ros_workspace/devel/include/piccolo_ros/: PiccoloCommand.h  PiccoloFromPayload.h  PiccoloRequestWaypoints.h  PiccoloStatus.h  PiccoloTelemetry.h  PiccoloToPayload.h  PiccoloTrack.h  PiccoloWPList.h  PiccoloWaypoint.h
ros_workspace/devel/include/ros_vehicle_msgs/: AISAddFilter.h  (+57 more)
ros_workspace/src/: big_actor_msgs
ros_workspace/src/mission_manager/: CMakeLists.txt  README.md  package.xml
ros_workspace/src/piccolo_ros/: CMakeLists.txt  CMakeLists.txt.ros  README.md  build_script.sh  build_script_dev.sh  clean.sh  mainpage.dox  piccolo_ros.launch  push.sh
ros_workspace/src/piccolo_ros/include/: PiccoloRosMessages.h  PiccoloSDK.h
ros_workspace/src/piccolo_ros/include/libarte/ARTE/: SerialPort.h
ros_workspace/src/piccolo_ros/include/libarte/ARTE/Core/: BitConverter.h  Client.h  Exception.h  IOMultiplexer.h  Server.h
ros_workspace/src/piccolo_ros/include/libarte/ARTE/Core/Utils/: ByteConverter.h  CryptoUtils.h  Queue.h
ros_workspace/src/piccolo_ros/include/libarte/ARTE/Network/: Definitions.h  TCPSocket.h  UDPSocket.h
ros_workspace/src/piccolo_ros/include/libarte/ARTE/time/: Clock.h
ros_workspace/src/piccolo_ros/include/libpiccolo/Piccolo/SDK/: Debug.h  SDK.h  Utils.h
ros_workspace/src/piccolo_ros/include/libpiccolo/Piccolo/SDK/Core/: CommunicationManager.h  Connection.h  Core.h  NetworkConnection.h  SerialConnection.h
ros_workspace/src/piccolo_ros/include/libpiccolo/Piccolo/SDK/Core/Packets/: AutopilotLoopPacket.h  AutopilotStream.h  AutopilotStreamPacket.h  LinkBridgePacket.h  Packet.h  PacketConstants.h  Packets.h  PayloadStream.h  Stream.h  StreamPacket.h  SystemsStatusHighResolutionPacket.h  TelemetryHighResolutionPacket.h  TrackPacket.h  WaypointListPacket.h  WaypointPacket.h
ros_workspace/src/piccolo_ros/libs/32/: piccoloexe
ros_workspace/src/piccolo_ros/libs/64/: piccoloexe
ros_workspace/src/piccolo_ros/msg/: PiccoloCommand.msg  PiccoloRequestWaypoints.msg  PiccoloStatus.msg  PiccoloTelemetry.msg  PiccoloToPayload.msg  PiccoloTrack.msg  PiccoloWPList.msg  PiccoloWaypoint.msg
ros_workspace/src/piccolo_ros/src/: piccolo_controller.cpp  piccolo_driver.cpp  piccolo_payload.cpp  piccolo_waypoint.cpp
ros_workspace/src/piccolo_ros/src/piccolo_ros/msg/: _PiccoloCommand.py  _PiccoloTelemetry.py  _PiccoloTrack.py  __init__.py
ros_workspace/src/ros_bigraph_manager/: CMakeLists.txt  build.gradle  package.xml  settings.gradle
ros_workspace/src/ros_vehicle/: CMakeLists.txt  README.md  SIL.launch  SIL2.launch  SIL2.launch~  gateway_test.launch  package.xml  ros_vehicle2_test.launch  ros_vehicle_HIL.launch  ros_vehicle_home.launch  ros_vehicle_home2.launch  ros_vehicle_risintra.launch  ros_vehicle_risintra2.launch  ros_vehicle_test.launch  testes_oilspill_SIL.launch  testes_ota01.launch  testes_ota_SIL.launch  testes_portimao_OPER.launch
ros_workspace/src/ros_vehicle/cmake/: messages.cmake
ros_workspace/src/ros_vehicle/conf/: locations.xml
ros_workspace/src/ros_vehicle/include/ap/: AutopilotNode.h
ros_workspace/src/ros_vehicle/include/common/: BigActorMsgs.h  Clock.h  Commons.h  Definitions.h  PiccoloMsgs.h  ROSNode.h  ROSVehicleException.h  ROSVehicleMsgs.h  Services.h
ros_workspace/src/ros_vehicle/include/core/: MissionManager.h
ros_workspace/src/ros_vehicle/include/mavlink/minimal/: version.h
ros_workspace/src/ros_vehicle/include/mavlink/rosvehicle/: mavlink.h  mavlink_msg_ais_filter.h  mavlink_msg_ais_position_report.h  mavlink_msg_ais_static_voyage.h  mavlink_msg_ais_status.h  rosvehicle.h  testsuite.h  version.h
ros_workspace/src/ros_vehicle/include/mse/: MSEProcessor.h
ros_workspace/src/ros_vehicle/include/net/: Gateway.h  GatewayClient.h  GatewayServer.h  MSEGateway.h  NetDefinitions.h  UDPSocket.h
ros_workspace/src/ros_vehicle/include/tasks/: MoveVehicleTask.h  Task.h  TaskManager.h
ros_workspace/src/ros_vehicle/include/utils/: AISManager.h  CRC16.h  Geodetic.h  JSON.h  Utils.h
ros_workspace/src/ros_vehicle/msg/: AutopilotState.msg
ros_workspace/src/ros_vehicle/scripts/: NetworkGateway_amonte.py  TCPGateway.py
ros_workspace/src/ros_vehicle/src/: ais_manager_node.cpp  autopilot_interface_node.cpp  mission_manager_node.cpp  mse_gateway_node.cpp  mse_processor_node.cpp  task_manager_node.cpp
ros_workspace/src/ros_vehicle/src/ap/: AutopilotNode.cpp
ros_workspace/src/ros_vehicle/src/common/: ROSNode.cpp
ros_workspace/src/ros_vehicle/src/core/: MissionManager.cpp
ros_workspace/src/ros_vehicle/src/mse/: MSEProcessor.cpp
ros_workspace/src/ros_vehicle/src/net/: GatewayClient.cpp  GatewayServer.cpp  MSEGateway.cpp
ros_workspace/src/ros_vehicle/src/tasks/: MoveVehicleTask.cpp  Task.cpp  TaskManager.cpp
ros_workspace/src/ros_vehicle/src/test/: Main.cpp
ros_workspace/src/ros_vehicle/src/utils/: AISManager.cpp  JSON.cpp
ros_workspace/src/ros_vehicle/startup/: ais_pkg.sh
ros_workspace/src/ros_vehicle_msgs/: CMakeLists.txt  README.md  package.xml
rosjava_workspace/src/big_actor_msgs/: CMakeLists.txt
rosjava_workspace/src/bigactor_pkg/: CMakeLists.txt  build.gradle  package.xml  settings.gradle  settings.gradle~
rosjava_workspace2/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
rosjava_workspace2/src/big_actor_msgs/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
rosjava_workspace2/src/bigactor_pkg/: build.gradle  package.xml~  settings.gradle
(+293 files in other folders)
